src/app/components/products/products.component.css
.card-top {
  position: relative;
  display: flex;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background: #fff;
  background-clip: border-box;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 0.25rem;
}

.item img {
  width: 64px;
}

.item {
  margin: 0px 15px;
  text-align: center;
}

.item a:hover {
  color: blue;
}

.card {
  padding: 20px;
  margin: 50px;
}

.card img {
  width: 200px;
  height: 200px;
  margin-bottom: 15px;
  transition: 0.3s ease-in-out;
}

.card img:hover {
  transition: 0.3s ease-in-out;
  transform: scale(1.1);
}

.btn {
  background-color: rgb(48, 38, 182);
  color: white;
  cursor: pointer;
  height: 50px;
}
.btn:hover {
  background-color: rgb(27, 12, 236);
}

.hidden{
  display: none;
}

